--- a/index.html
+++ b/index.html
@@ -15,62 +15,82 @@
       <h2 class="project-tagline">This is an example repository for the Technical Communication Tools class. </h2>
       <a href="https://github.com/juliakm/techcomm-demo" class="btn">View on GitHub</a>
       <a href="https://github.com/juliakm/techcomm-demo/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/juliakm/techcomm-demo/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h2>
-<a id="tools-presentation" class="anchor" href="#tools-presentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tools Presentation</h2>
+<h2>Tools Presentation</h2>
 
-<h3>
-<a id="what-are-github-pages" class="anchor" href="#what-are-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are GitHub Pages?</h3>
+<h3>What are GitHub Pages?</h3>
 
-<p>GitHub Pages is a free tool for creating personal homepage and project sites. The pages are written in GitHub-flavored Markdown and can be easily styled. Many technical project websites are powered by GitHub Pages today. 
-To generate a page, you'll need to have a free GitHub account. </p>
+<p>GitHub Pages is a free tool for creating personal homepage and project sites. The pages are written in GitHub-flavored Markdown and can be easily styled. Many technical project websites are powered by GitHub Pages today. </p>
 
-<h3>
-<a id="what-are-its-strengths-and-weaknesses" class="anchor" href="#what-are-its-strengths-and-weaknesses" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are its strengths and weaknesses?</h3>
+<p>To generate a page, you&#39;ll need to have a free GitHub account. </p>
+
+<p>This is a great option if you want to create a quick resume websites or would like to put information about a topic online. </p>
+
+<h3>What are its strengths and weaknesses?</h3>
 
 <p><strong>Strengths</strong></p>
 
 <ul>
-<li>Free</li>
-<li>It’s a quick process to create a site. You can have unlimited project pages. </li>
-<li>Sites come with nice designs. </li>
-<li>You do not have to worry about hosting a website.</li>
-<li>GitHub is designed for collaboration. You can start a website about a topic and then have someone else easily contribute to it. </li>
-<li>Your changes are versioned and you can easily switch back to a previous version of the site if you have an issue. </li>
-<li>Site content written in Markdown, although you can also use HTML. 
-<strong>Weaknesses</strong>
-</li>
-<li>You will need to know some Markdown. </li>
-<li>The process of saving your work can be confusing if you are not familiar with git. 
+	<li>Free</li>
+	<li>It’s a quick process to create a site. You can have unlimited project pages. </li>
+	<li>Sites come with nice designs. </li>
+	<li>You do not have to worry about hosting a website.</li>
+	<li>GitHub is designed for collaboration. You can start a website about a topic and then have someone else easily contribute to it. </li>
+	<li>Your changes are versioned and you can easily switch back to a previous version of the site if you have an issue. </li>
+	<li>Site content written in Markdown, although you can also use HTML. </li>
+	<li>Most designs are mobile-friendly (responsive).</li>
+	<li>GitHub Pages come with Wiki</li>
+</ul>
+
+<p><strong>Weaknesses</strong></p>
 
 <ul>
-<li>Git is a version control system that programmers use to save their work and collaborate together.</li>
-</ul>
-</li>
-<li>Similarly, making changes to the site requires some familiarly with git.<br>
-</li>
+	<li>You will need to know some HTML and Markdown.</li>
+	<li><p>The initial site is generated from Markdown into HTML. Future edits need to be made in HTML. </p>
+
+		<ul>
+			<li>If you fall in love with Markdown, then there is a more robust option that will let you edit pages in Markdown in the future. </li>
+		</ul></li>
+	<li><p>The process of saving your work can be confusing if you are not familiar with git. </p>
+
+		<ul>
+			<li>Git is a version control system that programmers use to save their work and collaborate together.</li>
+		</ul></li>
+	<li>Similarly, making changes to the site requires some familiarly with git. </li>
+	<li>You can’t easily change the theme. </li>
 </ul>
 
-<h2>
-<a id="what-are-some-alternatives" class="anchor" href="#what-are-some-alternatives" aria-hidden="true"><span class="octicon octicon-link"></span></a>What are some alternatives?</h2>
-
-<ul>
-<li>While there are a number of ways to create a website, let’s focus on hosted projects. </li>
-<li>Wordpress.com lets you create websites easily. </li>
-<li>Squarespace lets you create websites for a fee. </li>
-</ul>
-
-<h2>
-<a id="quick-demo" class="anchor" href="#quick-demo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quick demo</h2>
+<h2>What are some alternatives?</h2>
 
 <ul>
-<li>Create a GitHub account if you do not already have one. </li>
-<li>Create a new repository. </li>
-<li>Go to Settings &gt; Launch automatic pages generator. </li>
+	<li>While there are a number of ways to create a website, let’s focus on hosted projects. </li>
+	<li>Wordpress.com lets you create websites easily. </li>
+	<li>Squarespace lets you create websites for a fee. </li>
 </ul>
+
+<h2>Quick demo</h2>
+
+<ul>
+	<li>Create a GitHub account if you do not already have one. </li>
+	<li>Create a new repository. </li>
+	<li>Go to Settings &gt; Launch automatic pages generator.</li>
+	<li>Enter your content. </li>
+	<li>Pick a theme. </li>
+	<li>Edit your existing page. </li>
+	<li>Re-edit your existing page. </li>
+</ul>
+
+<h2>Why should I use this again?</h2>
+
+<ul>
+	<li>Free</li>
+	<li>Create pretty pages quickly</li>
+	<li>Collaborate easily</li>
+	<li>Simple versioning to roll back when you make changes</li>
+</ul>
+
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/juliakm/techcomm-demo">Duke Techical Communication Tools Class</a> is maintained by <a href="https://github.com/juliakm">juliakm</a>.</span>
